--- a/Scout/Base.lproj/Main.storyboard
+++ b/Scout/Base.lproj/Main.storyboard
@@ -128,6 +128,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pitch3.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="D9I-xm-Nr6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <gestureRecognizers/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="yPe-K5-yIw" userLabel="All Categories Stack View">
                                 <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <subviews>
@@ -137,7 +141,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lGn-ch-fBj" userLabel="Info Stack">
                                                 <rect key="frame" x="169" y="63.666666666666679" width="77" height="97.333333333333314"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xxE-sU-96D">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scout.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="xxE-sU-96D">
                                                         <rect key="frame" x="0.0" y="0.0" width="77" height="76.999999999999986"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="77" id="Z2P-2z-ZtT"/>
@@ -147,7 +151,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Q0-ja-OmE">
                                                         <rect key="frame" x="24" y="76.999999999999986" width="29" height="20.333333333333343"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -159,7 +163,7 @@
                                             <constraint firstItem="lGn-ch-fBj" firstAttribute="centerY" secondItem="ZLD-XI-SrG" secondAttribute="centerY" id="SMN-XN-t8f"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G2y-Vi-2gq" userLabel="Appearance">
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G2y-Vi-2gq" userLabel="Appearance">
                                         <rect key="frame" x="0.0" y="224" width="414" height="224"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iku-OA-NiW">
@@ -169,7 +173,7 @@
                                         </subviews>
                                         <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mx9-s5-2er" userLabel="Skills">
+                                    <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mx9-s5-2er" userLabel="Skills">
                                         <rect key="frame" x="0.0" y="448" width="414" height="224"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VzY-vS-8Xw">
@@ -185,6 +189,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="nL8-bq-ZtV" firstAttribute="top" secondItem="yPe-K5-yIw" secondAttribute="bottom" id="3Qs-hR-JhQ"/>
+                            <constraint firstItem="D9I-xm-Nr6" firstAttribute="leading" secondItem="6Pv-Jm-gIc" secondAttribute="leading" id="8bJ-lF-jXA"/>
+                            <constraint firstItem="D9I-xm-Nr6" firstAttribute="top" secondItem="6Pv-Jm-gIc" secondAttribute="top" id="CBK-99-rYt"/>
+                            <constraint firstAttribute="trailing" secondItem="D9I-xm-Nr6" secondAttribute="trailing" id="R1n-gZ-4dL"/>
+                            <constraint firstItem="nL8-bq-ZtV" firstAttribute="top" secondItem="D9I-xm-Nr6" secondAttribute="bottom" id="XAZ-7q-GJw"/>
                             <constraint firstItem="yPe-K5-yIw" firstAttribute="top" secondItem="VPp-CP-Khw" secondAttribute="bottom" id="ihN-dX-bqD"/>
                             <constraint firstAttribute="trailing" secondItem="yPe-K5-yIw" secondAttribute="trailing" id="qPz-Ot-CaM"/>
                             <constraint firstItem="yPe-K5-yIw" firstAttribute="leading" secondItem="6Pv-Jm-gIc" secondAttribute="leading" id="xM0-b1-JPI"/>
@@ -221,5 +229,6 @@
     </scenes>
     <resources>
         <image name="pitch3.jpg" width="1200" height="866"/>
+        <image name="scout.jpg" width="3000" height="2000"/>
     </resources>
 </document>
